refactor: bump project to spring-boot 4.0.2